Bug 442605 - wrong popups Z-order after applying "Show Desktop" effect
Summary: wrong popups Z-order after applying "Show Desktop" effect
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: 5.22.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL: https://invent.kde.org/plasma/kwin/-/...
Keywords:
Depends on:
Blocks:
 
Reported: 2021-09-17 15:42 UTC by Andrey
Modified: 2021-09-23 14:48 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments
Normal Z-order (147.44 KB, image/png)
2021-09-17 15:42 UTC, Andrey
Details
Wrong Z-order after "Show desktop" shortcut (145.77 KB, image/png)
2021-09-17 15:43 UTC, Andrey
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrey 2021-09-17 15:42:41 UTC
Created attachment 141653 [details]
Normal Z-order

SUMMARY
Kicker sub-menus and other popups start rendering below panel's elements as soon as "Show Desktop" effect is applied.
See the screenshots. 

STEPS TO REPRODUCE
1. Expand some classic Kicker's submenu so that it stays on the screen
2. Note the submenu is rendered correctly and fully seen 
3. Press "Show Desktop" shortcut or click on corresponding applet.

OBSERVED RESULT
Submenus become hidden by panel and main menu.

EXPECTED RESULT
Submenu stays visible and rendered with correct Z-order.

SOFTWARE/OS VERSIONS
Operating System: Ubuntu 21.04
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.86.0
Qt Version: 5.15.2
Comment 1 Andrey 2021-09-17 15:43:07 UTC
Created attachment 141654 [details]
Wrong Z-order after "Show desktop" shortcut
Comment 2 Andrey 2021-09-17 15:54:15 UTC
Pending MR:
https://invent.kde.org/plasma/kwin/-/merge_requests/1430
Comment 3 Andrey 2021-09-23 11:55:43 UTC
Git commit f453cb83e261767bac1f818e401b4e96d9f6e264 by Andrey Butirsky.
Committed on 23/09/2021 at 11:54.
Pushed by butirsky into branch 'master'.

fix wrong popups Z-order after applying "Show Desktop" effect

For some reason, layers are change after applying Show Desktop effect, so
we will have AboveLayer for our popups and Desktop, and NotificationLayer
for Dock which hides us.
Also, OSD and critical notifications were always hidden by our popups.

This patch solves both the issues.
Usual notifications will still be hidden, but hopefully it's not a big
issue.

M  +2    -2    src/abstract_client.cpp
M  +1    -0    src/utils.h

https://invent.kde.org/plasma/kwin/commit/f453cb83e261767bac1f818e401b4e96d9f6e264
Comment 4 Nate Graham 2021-09-23 14:48:58 UTC
Git commit 78c094fbd2054ec30806ef59f348b29c91fef994 by Nate Graham, on behalf of Andrey Butirsky.
Committed on 23/09/2021 at 14:48.
Pushed by ngraham into branch 'Plasma/5.23'.

fix wrong popups Z-order after applying "Show Desktop" effect

For some reason, layers are change after applying Show Desktop effect, so
we will have AboveLayer for our popups and Desktop, and NotificationLayer
for Dock which hides us.
Also, OSD and critical notifications were always hidden by our popups.

This patch solves both the issues.
Usual notifications will still be hidden, but hopefully it's not a big
issue.


(cherry picked from commit f453cb83e261767bac1f818e401b4e96d9f6e264)

M  +2    -2    src/abstract_client.cpp
M  +1    -0    src/utils.h

https://invent.kde.org/plasma/kwin/commit/78c094fbd2054ec30806ef59f348b29c91fef994