fix wrong popups Z-order after applying "Show Desktop" effect

For some reason, layers are change after applying Show Desktop effect, so
we will have AboveLayer for our popups and Desktop, and NotificationLayer
for Dock which hides us.
Also, OSD and critical notifications were always hidden by our popups.

This patch solves both the issues.
Usual notifications will still be hidden, but hopefully it's not a big
issue.

BUG: 442605


(cherry picked from commit f453cb83e261767bac1f818e401b4e96d9f6e264)