src/abstract_client.cpp
@@ -293,6 +293,8 @@ Layer AbstractClient::belongsToLayer() const
             return NotificationLayer;
         return layerForDock();
     }
+    if (isPopupWindow())
+        return PopupLayer;
     if (isOnScreenDisplay())
         return OnScreenDisplayLayer;
     if (isNotification())
@@ -308,8 +310,6 @@ Layer AbstractClient::belongsToLayer() const
         return ActiveLayer;
     if (keepAbove())
         return AboveLayer;
-    if (isPopupWindow())
-        return UnmanagedLayer;
 
     return NormalLayer;
 }
